# discharging

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  basewheel.cpp  basewheel.hpp  cartwheel.cpp  cartwheel.hpp  cartwheel2conf.py  cartwheel2conf.sh  charge_result.sh  configuration.cpp  configuration.hpp  discharge.sh  enum_send.sh  enum_wheel.sh  main.cpp  near_triangulation.cpp  near_triangulation.hpp  thread_pool.hpp  tile.cpp  tile.sh  unique.cpp
torus/send/: from6to7+_00011.rule  from6to7+_00013.rule  from6to7+_00017.rule  from6to7+_00022.rule  from6to7+_00030.rule  from6to7+_00031.rule  from6to7+_00033.rule  from6to7+_00037.rule  from6to7+_00050.rule  from6to7+_00065.rule  from6to7+_00080.rule  from6to7+_00086.rule  from6to7+_00096.rule  from6to7+_00115.rule  from6to7+_00117.rule  from6to7+_00124.rule  from6to7+_00126.rule  from6to7+_00148.rule  from6to7+_00151.rule  from6to7+_00154.rule  from6to7+_00155.rule  from6to7+_00156.rule  from7to7+_00005.rule  from7to7+_00026.rule  from7to7+_00028.rule  from7to7+_00040.rule  from7to7+_00043.rule  from7to7+_00057.rule  from7to7+_00058.rule  from7to7+_00069.rule  from7to7+_00070.rule  from7to7+_00071.rule  from7to7+_00072.rule  from7to7+_00092.rule  from7to7+_00120.rule  from7to7+_00121.rule  from7to7+_00122.rule  from7to7+_00125.rule  from7to7+_00128.rule  from7to7+_00129.rule  (+77 more)
torus/wheel/: 10_1004.wheel  10_1005.wheel  10_1007.wheel  10_1009.wheel  10_101.wheel  10_1028.wheel  10_1034.wheel  10_104.wheel  10_1044.wheel  10_1045.wheel  10_1047.wheel  10_1049.wheel  10_1057.wheel  10_1060.wheel  10_1061.wheel  (+12485 more)
